[package]
name = "zooid"
version = "0.0.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Empty crate, used only to reserve the name."
homepage = "https://github.com/wsgalaxy/zooid"
repository = "https://github.com/wsgalaxy/zooid"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
