[package]
name = "zooid"
version = "0.0.1"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An actor library inspired by actix"
homepage = "https://github.com/wsgalaxy/zooid"
repository = "https://github.com/wsgalaxy/zooid"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
